fixed nav bar on mobile

--- a/main.css
+++ b/main.css
@@ -200,7 +200,7 @@ body.night-theme {
     transform: scaleX(0.8);
 }
 .Mobile-Nav-Content-Item-Extra {
-    margin-bottom: 20px;
+    margin-bottom: 20px !important;
 }
 
 /* -------------------------------------------------------------------------------------------------- */
