--- a/products/info/info.css
+++ b/products/info/info.css
@@ -337,6 +337,6 @@ body {
 
 @media (max-width: 570px) {
     .Product-Card-Wrapper-Back-Button {
-        top: 40px;
+        top: 55px;
     }
 }
